2005-03-03  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/sabayon.glade: add a "Delete" menu item.
	
	* admin-tool/editorwindow.py:
	(ProfileModel.reload): implement reloading the model.
	(ProfileEditorWindow.__handle_key_press),
	(ProfileEditorWindow.__handle_delete): hook up the
	delete key and menu item.
	
	* admin-tool/profilesdialog.py:
	(ProfilesDialog.__handle_key_press): hook up the
	delete key.

2005-03-03  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/sabayon.glade: add a "Clear History"
	menu item.
	
	* admin-tool/editorwindow.py: hook up "Clear History"
	and "Save".
	
	* lib/storage.py:
	(ProfileStorage.clear_revisions): implement clear
	revision history.
	(run_unit_tests): add tests for clearing revision
	history.

2005-03-02  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/editorwindow.py: add a silly little
	placeholder viewer for the contents of the profile.
	Lots more work to be done here.
	
	* admin-tool/profilesdialog.py: add a "Properties"
	button and hook up the editor window.
	
	* admin-tool/sabayon.glade: add the properties button
	and the editor window.
	
	* admin-tool/Makefile.am: add editorwindow.py

2005-03-02  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/monitorwindow.py: move about dialog
	stuff to
	
	* admin-tool/aboutdialog.py: here.
	
	* admin-tool/Makefile.am: add aboutdialog.py

2005-03-01  Mark McLoughlin  <markmc@redhat.com>

	* lib/sources/filessource.py:
	(commit): set the "mandatory" attribute correctly.
	
	* lib/sources/gconfsource.py:
	(apply): fix check to see if the GConf dirs are in
	the profile storage.

2005-03-01  Mark McLoughlin  <markmc@redhat.com>

	* lib/storage.py:
	(__item_revision_is_current): return false if no
	current revision.
	(__unpack): create the revisions directory. Use the
	list of files and directories in the metadata to
	figure out what to unpack. Fixes problems with adding
	empty dirs.
	(add): don't copy previous revision if it doesn't
	exist.