@@ -1,5 +1,15 @@
 2005-03-03  Mark McLoughlin  <markmc@redhat.com>
 
+	* admin-tool/Makefile.am: add saveconfirm.py
+
+	* admin-tool/saveconfirm.py: HIG save confirmation
+	dialog. Mostly copied from GEdit.
+	
+	* admin-tool/editorwindow.py: hook up the save
+	confirmation dialog.
+
+2005-03-03  Mark McLoughlin  <markmc@redhat.com>
+
 	* admin-tool/sabayon.glade: add a "Delete" menu item.
 	
 	* admin-tool/editorwindow.py:
